# scrapedin

./: .gitignore  LICENSE  README.md  pyproject.toml
src/scrapedin/: config.py  session.py
src/scrapedin/browser/: context.py
src/scrapedin/models/: company.py  job.py  person.py
src/scrapedin/scrapers/: selectors.py  utils.py
src/scrapedin/scrapers/company/: get_company.py  get_employees.py
src/scrapedin/scrapers/job/: __init__.py  get_job.py
src/scrapedin/scrapers/person/: connections.py  education.py  experience.py  get_person.py
tests/: demo_scraper.py  get_company_test.py  get_job_test.py  get_profile_test.py  run_scraper.py  search_jobs_test.py
